fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ margin: 0;
     padding-top: 0px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     overflow-y: scroll;
-    /* -webkit-overflow-scrolling: touch; */
+    -webkit-overflow-scrolling: touch;
   }
 
   .newsfeed .closebtn {
